glr-core/tests/fixtures/missing_parse_table_fields.stderr
error[E0063]: missing fields `alias_sequences`, `dynamic_prec_by_rule`, `eof_symbol` and 14 other fields in initializer of `ParseTable`
  --> tests/fixtures/missing_parse_table_fields.rs:10:24
   |
10 |     let _parse_table = ParseTable {
   |                        ^^^^^^^^^^ missing `alias_sequences`, `dynamic_prec_by_rule`, `eof_symbol` and 14 other fields
